<resources>
    <string name="app_name">A Diligência</string>
    <string name="btnExperimente">Experimente!</string>
    <string name="txtInicio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In massa felis, tempus sed lorem non, pretium convallis massa. Integer volutpat vitae mi sit amet fringilla. Etiam imperdiet, quam ut viverra ornare, neque massa interdum mi, non sagittis augue elit sed felis.</string>
    <string name="hintEmail">E-mail</string>
    <string name="hintPassword">Senha</string>
    <string name="ctdescLogotipo">Logotipo</string>
    <string name="txtForgetPassword">Esqueceu a sua senha?</string>
    <string name="txtRecoverPassword">Não é cadastrado? Cadastre-se</string>
    <string name="txtSocialLogin">Ou acesse com:</string>
    <string name="btnGo">ENTRAR</string>
    <string name="ctdescFbIcon">Facebook icon</string>
    <string name="ctdescGPlus">Google Plus icon</string>
    <string name="txtJuri">juri</string>
    <string name="txtSobre">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce feugiat sodales leo in bibendum. Sed sagittis a dui et porttitor. Fusce ex odio, fermentum id nisi non, eleifend pellentesque justo. Etiam quis mauris placerat, viverra metus eu, malesuada libero. Curabitur in pulvinar mi. Nulla ac sagittis nisi. Suspendisse non eros nisi. In quis est eu metus feugiat dictum. Curabitur sodales ligula at sapien condimentum convallis sed eu lectus. Curabitur molestie dictum condimentum. Donec eget neque tincidunt, commodo quam sit amet, tincidunt risus. Aliquam consequat felis vitae tellus efficitur, vel bibendum sem varius. Fusce mattis felis ac placerat tristique. Aenean sagittis ex et iaculis vestibulum.</string>
    <string name="txtTituloSobre">Sobre</string>
    <string name="txtTituloTermosECond">Termos e condições</string>
    <string name="txtTermos">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut arcu eu lectus lacinia scelerisque. Suspendisse in arcu id odio ultricies pellentesque. Cras et massa lectus. Ut libero nunc, consequat vitae dui eget, tempus commodo nisl. Morbi bibendum, nisl ac bibendum auctor, urna magna faucibus orci, facilisis consectetur enim sem ac sem. Nulla nec fringilla urna, quis eleifend dolor. Quisque id porta orci, quis tincidunt lectus. Pellentesque orci nulla, euismod ornare nisl eget, mattis finibus nibh. Nunc mollis est vel ex lobortis venenatis sodales sed sapien. Aliquam eget elementum ipsum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec enim enim, semper at pellentesque nec, venenatis at arcu.   Ut rutrum vitae ex eget condimentum. Morbi non condimentum lectus. Curabitur viverra arcu ut condimentum dignissim. Nullam nibh ipsum, tristique egestas elit ac, iaculis ullamcorper est. Proin ultricies quam ex, vitae euismod ex accumsan in. Nullam elit turpis, porttitor eu tempus in, malesuada et arcu. Fusce eu lacinia velit. Nulla iaculis blandit sollicitudin. Fusce a nisl purus.   Integer pharetra sit amet orci et ornare. Nulla facilisi. Aliquam aliquet, tortor et placerat condimentum, eros ex mollis elit, vel fringilla augue sapien a erat. Proin auctor, sem nec convallis condimentum, tellus nulla condimentum diam, quis pellentesque enim tortor quis lectus. Curabitur ac imperdiet augue. Fusce dictum imperdiet mauris, et luctus velit tristique in. Sed luctus blandit hendrerit. Vivamus id urna elit. Curabitur in diam et leo dapibus dapibus. Sed mi enim, placerat et eros in, rhoncus placerat elit. Nulla vel luctus ante. Suspendisse nulla felis, sagittis vitae mi nec, euismod semper velit. Cras egestas, augue eu aliquet dignissim, nunc odio tempus urna, eget ultrices odio est id risus.   Nam ipsum magna, placerat eleifend congue quis, cursus id sapien. Nulla nec felis neque. Cras ut vestibulum arcu, id consectetur lorem. Vivamus nisi nisi, volutpat nec nisl vel, aliquet tristique diam. Nullam in felis eget nisi dictum dapibus. Praesent nec feugiat ligula. Quisque ultricies magna vel ligula vehicula, quis facilisis elit pretium. Mauris tellus massa, condimentum sed metus sit amet, posuere fermentum enim. Maecenas tempor ac enim ac molestie.</string>
    <string name="btnConfig">Configurations icon</string>
    <string name="hintLocal">São Paulo</string>
    <string name="btnMenu">Menu icon</string>
    <string name="hintNotifIcon">Notification icon</string>
    <string name="txtNomeApp">A Diligência</string>
    <string name="txtTituloNovaProposta">Acompanhamentos em  São Paulo - SP</string>
    <string name="txtNovaProp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eget massa quis felis euismod tempus quis at sapien. Quisque sem lacus, pellentesque sit amet enim et, laoreet fermentum purus. Praesent pharetra eros vitae imperdiet malesuada.</string>
    <string name="txtContratante">Contratante</string>
    <string name="txtDescNovaDiligencia">Adicione uma diligência e receba propostas de nossos advogados cadastrados!</string>
    <string name="txtTitulo">Título:</string>
    <string name="txtCidade">Cidade:</string>
    <string name="txtDesc">Descrição:</string>
    <string name="txtDataLimite">Data limite do recebimento de propostas:</string>
    <string name="txtCadastrar">Cadastrar diligência</string>
    <string name="logo">Logo</string>
    <string name="navigation_drawer_open">Abrir menu</string>
    <string name="navigation_drawer_close">Fechar menu</string>
    <string name="title_activity_drawer">drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_menu">menu</string>
    <string name="buscar_dilig_ncias">Buscar diligências</string>
    <string name="sobre">Sobre</string>
    <string name="minhas_dilig_ncias">Minhas diligências</string>
    <string name="termos_e_condi_es">Termos e condições</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="nome">Nome</string>
    <string name="confirme_a_senha">Confirme a senha</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="confirmar">Confirmar</string>
    <string name="home">Home</string>
    <string name="buscar_diligencias">Buscar diligências</string>
    <string name="minhas_diligencias">Minhas diligências</string>
    <string name="termos_e_condicoes">Termos e condições</string>
    <string name="sair">Sair</string>
    <string name="nomeUser">Artur Eduardo</string>
    <string name="cidade">São Leopoldo, RS</string>
    <string name="recuperar_senha">Recuperar senha</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
</resources>
