<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Menu">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:title="@string/menu_home" />
            <item
                android:id="@+id/nav_buscar_diligencias"
                android:title="@string/buscar_dilig_ncias" />
            <item
                android:id="@+id/nav_sobre"
                android:title="@string/sobre" />
            <item
                android:id="@+id/nav_minhas_diligencias"
                android:title="@string/minhas_dilig_ncias" />
            <item
                android:id="@+id/nav_termos_e_condicoes"
                android:title="@string/termos_e_condi_es" />
            <item
                android:id="@+id/nav_sair"
                android:title="@string/sair" />
        </menu>
    </item>


</menu>
